Add section service

--- a/index.html
+++ b/index.html
@@ -47,36 +47,39 @@
     </header>
 
     <main>
-        <section>
-            <div class="second_section">
-                <div class="second_section_img_container">
-                    <img src="img/webDeveloper.jpg"> <br>
-                    <br>
-                    <img src="img/webDesign.jpg">
+        <section class="service">
+            <div class="container">
+
+              <div class="row">
+
+                <div class="column">
+                  <img src="img/webDeveloper.jpg"> <br>
                 </div>
-                <div class="second_section_text_container">
-                    <h2>Web Developer</h2>
-                    <h4>
-                        BlablablablaBlablablabla <br>
-                        BlablablablaBlablablabla <br>
-                        BlablablablaBlablablabla <br>
-                        BlablablablaBlablablabla <br>
-                        BlablablablaBlablablabla <br>
-                        BlablablablaBlablablabla
-                    </h4>
-                    <br>
-                    <button class="service_btn">see Gallery</button>
-                    <br>
-                    <h2>Web Design</h2>
-                    <h4>
-                        BlablablablaBlablablabla <br>
-                        BlablablablaBlablablabla <br>
-                        BlablablablaBlablablabla <br>
-                        BlablablablaBlablablabla <br>
-                        BlablablablaBlablablabla <br>
-                        BlablablablaBlablablabla
-                    </h4>
+
+                <div class="column">
+                  <h2>Web Development</h2>
+                  <p>Curabitur nunc enim, convallis vel mi quis, sagittis volutpat turpis. Fusce ullamcorper cursus vehicula. Suspendisse ut placerat lectus. Proin pharetra accumsan felis, quis ornare ligula. Aliquam erat volutpat. Morbi in.</p>
+                  <br>
+                  <button>See Gallery</button>
                 </div>
+
+              </div>
+
+              <div class="row">
+
+                <div class="column">
+                  <img src="img/webDesign.jpg"> <br>
+                </div>
+
+                <div class="column">
+                  <h2>Web Design</h2>
+                  <p>Curabitur nunc enim, convallis vel mi quis, sagittis volutpat turpis. Fusce ullamcorper cursus vehicula. Suspendisse ut placerat lectus. Proin pharetra accumsan felis, quis ornare ligula. Aliquam erat volutpat. Morbi in.</p>
+                  <br>
+                  <button>See Gallery</button>
+                </div>
+
+              </div>
+
             </div>
         </section>
     </main>
