--- a/index.html
+++ b/index.html
@@ -4,12 +4,18 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Aldrich&family=Fira+Sans&display=swap"
+      rel="stylesheet"
+    />
     <title>Document</title>
   </head>
   <body>
     <header>
-      <section>
-        <div class="first_section">
+      <div class="container">
+        <div class="row">
           <nav>
             <div class="img_container">
               <a href="index.html"><img class="logo" src="img/logo.jpg" /></a>
@@ -22,28 +28,25 @@
               <a class="links" href="">Gallery</a>
             </div>
           </nav>
-          <br />
-          <br />
-          <div>
-            <div class="creativity_logo2_container">
-              <div class="creativity_container">
-                <h1>KEJARO</h1>
-              </div>
-              <div class="logo2_container">
-                <img class="logo2" src="img/logo.jpg" />
-              </div>
-            </div>
-            <div class="text_container">
-              <h3>Creativity Is our motto</h3>
-              <br />
-              <br />
-            </div>
-            <div class="button_container">
-              <button class="service_btn">Our Service</button>
+        </div>
+
+        <div class="row">
+          <div class="column">
+            <h1>KEJARO</h1>
+            <h3>Creativity Is our motto</h3>
+          </div>
+
+          <div class="column">
+            <div class="logo2_container">
+              <img class="logo2" src="img/logo.jpg" />
             </div>
           </div>
         </div>
-      </section>
+
+        <div class="row">
+          <button class="service_btn">Our Service</button>
+        </div>
+      </div>
     </header>
 
     <main>
@@ -81,6 +84,32 @@
               </div>
 
             </div>
+        </section>
+
+        <section class="aboout_section">
+          <div class="row">
+            <div class="column about_text_container">
+              <h2>About Us</h2>
+              <p class="about_text">
+                Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem
+                ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum
+                Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum
+              </p>
+              <p class="about_text">
+                Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem
+                ipsum Lorem ipsum Lorem ipsum Lorem ipsum
+              </p>
+              <button class="about_btn">Read More</button>
+            </div>
+            <div class="column">
+              <div class="containeer">
+                <img class="profil_img" src="img/logo.jpg" />
+                <img class="profil_img" src="img/logo.jpg" /> <br />
+                <img class="profil_img" src="img/logo.jpg" />
+                <img class="profil_img" src="img/logo.jpg" />
+              </div>
+            </div>
+          </div>
         </section>
     </main>
 
