Change positions of elements and font families

--- a/index.html
+++ b/index.html
@@ -4,12 +4,9 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Aldrich&family=Fira+Sans&display=swap"
-      rel="stylesheet"
-    />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Aldrich&family=Inter&display=swap" rel="stylesheet">
     <title>Document</title>
   </head>
   <body>
@@ -17,9 +14,7 @@
       <div class="container">
         <div class="row">
           <nav>
-            <div class="img_container">
-              <a href="index.html"><img class="logo" src="img/logo.jpg" /></a>
-            </div>
+            <a href="index.html"><img class="logo" src="img/logo.jpg" /></a>
             <div class="link_container">
               <a class="links" href="">Home</a>
               <a class="links" href="">Service</a>
@@ -32,14 +27,14 @@
 
         <div class="row">
           <div class="column">
-            <h1>KEJARO</h1>
-            <h3>Creativity Is our motto</h3>
+            <div class="wrapper">
+              <h1>KEJARO</h1>
+              <p>Creativity Is our motto</p>
+            </div>
           </div>
 
           <div class="column">
-            <div class="logo2_container">
-              <img class="logo2" src="img/logo.jpg" />
-            </div>
+              <img class="globus" src="img/logo.jpg" />
           </div>
         </div>
 
