Update section service

--- a/index.html
+++ b/index.html
@@ -56,8 +56,7 @@
 
                 <div class="column">
                   <h2>Web Development</h2>
-                  <p>Curabitur nunc enim, convallis vel mi quis, sagittis volutpat turpis. Fusce ullamcorper cursus vehicula. Suspendisse ut placerat lectus. Proin pharetra accumsan felis, quis ornare ligula. Aliquam erat volutpat. Morbi in.</p>
-                  <br>
+                  <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable.</p>
                   <button>See Gallery</button>
                 </div>
 
@@ -71,8 +70,7 @@
 
                 <div class="column">
                   <h2>Web Design</h2>
-                  <p>Curabitur nunc enim, convallis vel mi quis, sagittis volutpat turpis. Fusce ullamcorper cursus vehicula. Suspendisse ut placerat lectus. Proin pharetra accumsan felis, quis ornare ligula. Aliquam erat volutpat. Morbi in.</p>
-                  <br>
+                  <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable.</p>
                   <button>See Gallery</button>
                 </div>
 
