Update section about

--- a/index.html
+++ b/index.html
@@ -79,23 +79,20 @@
             </div>
         </section>
 
-        <section class="aboout_section">
+      <section class="about">
+        <div class="container">
           <div class="row">
-            <div class="column about_text_container">
+            <div class="column">
               <h2>About Us</h2>
-              <p class="about_text">
-                Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem
-                ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum
-                Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum
-              </p>
-              <p class="about_text">
-                Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem
-                ipsum Lorem ipsum Lorem ipsum Lorem ipsum
-              </p>
-              <button class="about_btn">Read More</button>
+
+              <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised</p>
+
+              <p>words which don't look even slightly believable. If you are going to use a passage of</p>
+
+              <button>Read More</button>
             </div>
             <div class="column">
-              <div class="containeer">
+              <div class="wrapper">
                 <img class="profil_img" src="img/logo.jpg" />
                 <img class="profil_img" src="img/logo.jpg" /> <br />
                 <img class="profil_img" src="img/logo.jpg" />
@@ -103,7 +100,8 @@
               </div>
             </div>
           </div>
-        </section>
+        </div>
+      </section>
     </main>
 
     <footer></footer>
