Neue Call to Action section

--- a/index.html
+++ b/index.html
@@ -91,13 +91,13 @@
             <div class="column about_text_container">
               <h2>About Us</h2>
               <p class="about_text">
-                Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem
-                ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum
-                Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum
+                Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+                Molestiae sit commodi corporis unde nam quia nihil quisquam,
+                tenetur sunt modi veritatis dolor, facilis laudantium amet
+                voluptate perspiciatis iusto dolorem odit.
               </p>
               <p class="about_text">
-                Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem
-                ipsum Lorem ipsum Lorem ipsum Lorem ipsum
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis doloremque natus nihil
               </p>
               <button class="about_btn">Read More</button>
             </div>
@@ -109,6 +109,14 @@
                 <img class="profil_img" src="img/logo.jpg" />
               </div>
             </div>
+          </div>
+        </section>
+  
+        <section>
+          <div class="callToAction">
+            <h2>Masz biznes, ale nie masz strony internetowej?</h2>
+            <h1>My to załatwimy</h1>
+            <button class="contactBtn">Contact Us</button>
           </div>
         </section>
     </main>
