--- a/index.html
+++ b/index.html
@@ -79,33 +79,19 @@
             </div>
         </section>
 
-      <section class="about">
-        <div class="container">
+        <section class="aboout_section">
           <div class="row">
-            <div class="column">
+            <div class="column about_text_container">
               <h2>About Us</h2>
-<<<<<<< HEAD
-              <p class="about_text">
-                Lorem ipsum dolor sit amet consectetur, adipisicing elit.
-                Molestiae sit commodi corporis unde nam quia nihil quisquam,
-                tenetur sunt modi veritatis dolor, facilis laudantium amet
-                voluptate perspiciatis iusto dolorem odit.
-              </p>
-              <p class="about_text">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis doloremque natus nihil
-              </p>
-              <button class="about_btn">Read More</button>
-=======
 
               <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised</p>
 
               <p>words which don't look even slightly believable. If you are going to use a passage of</p>
 
               <button>Read More</button>
->>>>>>> 4153f2e05c81a989f7b579f6861769c1526a13f9
             </div>
             <div class="column">
-              <div class="wrapper">
+              <div class="containeer">
                 <img class="profil_img" src="img/logo.jpg" />
                 <img class="profil_img" src="img/logo.jpg" /> <br />
                 <img class="profil_img" src="img/logo.jpg" />
@@ -113,7 +99,6 @@
               </div>
             </div>
           </div>
-<<<<<<< HEAD
         </section>
   
         <section>
@@ -123,10 +108,6 @@
             <button class="contactBtn">Contact Us</button>
           </div>
         </section>
-=======
-        </div>
-      </section>
->>>>>>> 4153f2e05c81a989f7b579f6861769c1526a13f9
     </main>
 
     <footer></footer>
