Make some corrections

--- a/index.html
+++ b/index.html
@@ -79,9 +79,10 @@
             </div>
         </section>
 
-        <section class="aboout_section">
+        <section class="about">
+          <div class="container">
           <div class="row">
-            <div class="column about_text_container">
+            <div class="column">
               <h2>About Us</h2>
 
               <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised</p>
@@ -91,22 +92,21 @@
               <button>Read More</button>
             </div>
             <div class="column">
-              <div class="containeer">
                 <img class="profil_img" src="img/logo.jpg" />
                 <img class="profil_img" src="img/logo.jpg" /> <br />
                 <img class="profil_img" src="img/logo.jpg" />
                 <img class="profil_img" src="img/logo.jpg" />
-              </div>
             </div>
           </div>
+        </div>
         </section>
   
-        <section>
-          <div class="callToAction">
+        <section class="contact">
+          <div class="container">
             <h2>Masz biznes, ale nie masz strony internetowej?</h2>
             <h1>My to załatwimy</h1>
             <button class="contactBtn">Contact Us</button>
-          </div>
+        </div>
         </section>
     </main>
 
