--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
           </div>
 
           <div class="column">
-              <img class="globus" src="img/logo.jpg" />
+              <img class="globus" src="img/globus.png" />
           </div>
         </div>
 
@@ -79,54 +79,35 @@
             </div>
         </section>
 
-      <section class="about">
-        <div class="container">
+        <section class="about">
+          <div class="container">
           <div class="row">
             <div class="column">
               <h2>About Us</h2>
-<<<<<<< HEAD
-              <p class="about_text">
-                Lorem ipsum dolor sit amet consectetur, adipisicing elit.
-                Molestiae sit commodi corporis unde nam quia nihil quisquam,
-                tenetur sunt modi veritatis dolor, facilis laudantium amet
-                voluptate perspiciatis iusto dolorem odit.
-              </p>
-              <p class="about_text">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis doloremque natus nihil
-              </p>
-              <button class="about_btn">Read More</button>
-=======
 
               <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised</p>
 
               <p>words which don't look even slightly believable. If you are going to use a passage of</p>
 
               <button>Read More</button>
->>>>>>> 4153f2e05c81a989f7b579f6861769c1526a13f9
             </div>
             <div class="column">
-              <div class="wrapper">
-                <img class="profil_img" src="img/logo.jpg" />
-                <img class="profil_img" src="img/logo.jpg" /> <br />
-                <img class="profil_img" src="img/logo.jpg" />
-                <img class="profil_img" src="img/logo.jpg" />
-              </div>
+                <img class="profil_img" src="img/kevinprofil.jpg" />
+                <img class="profil_img" src="img/miroslawprofil.jpg" /> <br />
+                <img class="profil_img" src="img/jaquelineprofil.jpg" />
+                <img class="profil_img" src="img/profilrobin.jpg" />
             </div>
           </div>
-<<<<<<< HEAD
+        </div>
         </section>
   
-        <section>
-          <div class="callToAction">
+        <section class="contact">
+          <div class="container">
             <h2>Masz biznes, ale nie masz strony internetowej?</h2>
             <h1>My to załatwimy</h1>
             <button class="contactBtn">Contact Us</button>
-          </div>
-        </section>
-=======
         </div>
-      </section>
->>>>>>> 4153f2e05c81a989f7b579f6861769c1526a13f9
+        </section>
     </main>
 
     <footer></footer>
