--- a/index.html
+++ b/index.html
@@ -89,20 +89,13 @@
 
               <p>words which don't look even slightly believable. If you are going to use a passage of</p>
 
-              <button>Read More</button>
+              <button class="about_btn">Read More</button>
             </div>
             <div class="column">
-<<<<<<< HEAD
                 <img class="profil_img" src="img/kevinprofil.jpg" />
                 <img class="profil_img" src="img/miroslawprofil.jpg" /> <br />
                 <img class="profil_img" src="img/jaquelineprofil.jpg" />
                 <img class="profil_img" src="img/profilrobin.jpg" />
-=======
-                <img class="profil_img" src="img/logo.jpg" />
-                <img class="profil_img" src="img/logo.jpg" /> <br />
-                <img class="profil_img" src="img/logo.jpg" />
-                <img class="profil_img" src="img/logo.jpg" />
->>>>>>> ae2599b2e594a52a26565c98105f24f73ccd992d
             </div>
           </div>
         </div>
