Set rules, how HTML and CSS code should written like
Format the code in index.html like so:
<div>

  <div>
    <div />
    <div />
  </div>

  <div>

    <div>
      <div>
        <div />
      </div>
    </div>

    <div>

      <div />
      <div />

      <div>
        <div />
      </div>

    </div>

  </div>

</div>

Reorder the elements in <head> so, that at te beginning is <meta>, then <title> and <link>. The link to style.css is at the end.

If the href attribute of a link is empty, give it the value # (hashtag).

Remove justify-content property from '.row' and '.wrapper'. Create rules for columns with flex from 1 to 11.

Give the colums at index.html the right classes and remove the class profil_img.

[O
At style.css, order the rules similary like at index.html. Give a space after the comment /* Contact */. Change selector .first_section to header at Media.

--- a/index.html
+++ b/index.html
@@ -1,115 +1,128 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="style.css" />
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Aldrich&family=Inter&display=swap" rel="stylesheet">
-    <title>Document</title>
-  </head>
-  <body>
-    <header>
-      <div class="container">
-        <div class="row">
-          <nav>
-            <a href="index.html"><img class="logo" src="img/logo.jpg" /></a>
-            <div class="link_container">
-              <a class="links" href="">Home</a>
-              <a class="links" href="">Service</a>
-              <a class="links" href="">About</a>
-              <a class="links" href="">Contact</a>
-              <a class="links" href="">Gallery</a>
-            </div>
-          </nav>
-        </div>
 
-        <div class="row">
-          <div class="column">
-            <div class="wrapper">
-              <h1>KEJARO</h1>
-              <p>Creativity Is our motto</p>
-            </div>
-          </div>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Document</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Aldrich&family=Inter&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="style.css" />
+</head>
 
-          <div class="column">
-              <img class="globus" src="img/globus.png" />
-          </div>
-        </div>
+<body>
 
-        <div class="row">
-          <button class="service_btn">Our Service</button>
-        </div>
+  <header>
+    <div class="container">
+
+      <div class="row">
+        <nav>
+
+          <a href="#"><img class="logo" src="img/logo.jpg" /></a>
+
+          <ul>
+            <a href="#">Home</a>
+            <a href="#">Service</a>
+            <a href="#">About</a>
+            <a href="#">Contact</a>
+            <a href="#">Gallery</a>
+          </ul>
+
+        </nav>
       </div>
-    </header>
 
-    <main>
-        <section class="service">
-            <div class="container">
+      <div class="row">
 
-              <div class="row">
-
-                <div class="column">
-                  <img src="img/webDeveloper.jpg"> <br>
-                </div>
-
-                <div class="column">
-                  <h2>Web Development</h2>
-                  <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable.</p>
-                  <button>See Gallery</button>
-                </div>
-
-              </div>
-
-              <div class="row">
-
-                <div class="column">
-                  <img src="img/webDesign.jpg"> <br>
-                </div>
-
-                <div class="column">
-                  <h2>Web Design</h2>
-                  <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable.</p>
-                  <button>See Gallery</button>
-                </div>
-
-              </div>
-
-            </div>
-        </section>
-
-        <section class="about">
-          <div class="container">
-          <div class="row">
-            <div class="column">
-              <h2>About Us</h2>
-
-              <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised</p>
-
-              <p>words which don't look even slightly believable. If you are going to use a passage of</p>
-
-              <button class="about_btn">Read More</button>
-            </div>
-            <div class="column">
-                <img class="profil_img" src="img/kevinprofil.jpg" />
-                <img class="profil_img" src="img/miroslawprofil.jpg" /> <br />
-                <img class="profil_img" src="img/jaquelineprofil.jpg" />
-                <img class="profil_img" src="img/profilrobin.jpg" />
-            </div>
+        <div class="col-7">
+          <div class="wrapper">
+            <h1>KEJARO</h1>
+            <p>Creativity Is our motto</p>
           </div>
         </div>
-        </section>
-  
-        <section class="contact">
-          <div class="container">
-            <h2>Masz biznes, ale nie masz strony internetowej?</h2>
-            <h1>My to załatwimy</h1>
-            <button class="contactBtn">Contact Us</button>
-        </div>
-        </section>
-    </main>
 
-    <footer></footer>
-  </body>
+        <div class="col-5">
+          <img class="globus" src="img/globus.png" />
+        </div>
+
+      </div>
+
+      <div class="row">
+        <button>Our Service</button>
+      </div>
+
+    </div>
+  </header>
+
+  <section class="service">
+    <div class="container">
+
+      <div class="row">
+
+        <div class="col-6">
+          <img src="img/webDeveloper.jpg">
+        </div>
+
+        <div class="col-6">
+          <h2>Web Development</h2>
+          <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration
+            in some form, by injected humour, or randomised words which don't look even slightly believable.</p>
+          <button>See Gallery</button>
+        </div>
+
+      </div>
+
+      <div class="row">
+
+        <div class="col-6">
+          <img src="img/webDesign.jpg">
+        </div>
+
+        <div class="col-6">
+          <h2>Web Design</h2>
+          <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration
+            in some form, by injected humour, or randomised words which don't look even slightly believable.</p>
+          <button>See Gallery</button>
+        </div>
+
+      </div>
+
+    </div>
+  </section>
+
+  <section class="about">
+    <div class="container">
+      <div class="row">
+
+        <div class="col-6">
+          <h2>About Us</h2>
+          <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration
+            in some form, by injected humour, or randomised</p>
+          <p>words which don't look even slightly believable. If you are going to use a passage of</p>
+          <button>Read More</button>
+        </div>
+
+        <div class="col-6">
+          <img src="img/kevinprofil.jpg" />
+          <img src="img/miroslawprofil.jpg" />
+          <img src="img/jaquelineprofil.jpg" />
+          <img src="img/profilrobin.jpg" />
+        </div>
+
+      </div>
+    </div>
+  </section>
+
+  <section class="contact">
+    <div class="container">
+      <h2>Masz biznes, ale nie masz strony internetowej?</h2>
+      <h1>My to załatwimy</h1>
+      <button>Contact Us</button>
+    </div>
+  </section>
+
+  <footer></footer>
+
+</body>
+
 </html>
