Add home icon to navigation bar

--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Aldrich&family=Inter&display=swap" rel="stylesheet">
+  <link href="icons/css/fontawesome.css" rel="stylesheet">
+  <link href="icons/css/brands.css" rel="stylesheet">
+  <link href="icons/css/solid.css" rel="stylesheet">
   <link rel="stylesheet" href="css/style.css" />
 </head>
 
@@ -22,7 +25,7 @@
           <a href="#"><img class="logo" src="img/logo.jpg" /></a>
 
           <ul>
-            <a href="#">Home</a>
+            <a href="#"><img src="icons/home.png"></a>
             <a href="#">Service</a>
             <a href="#">About</a>
             <a href="#">Contact</a>
