Change images in section about

--- a/index.html
+++ b/index.html
@@ -115,10 +115,7 @@
         </div>
 
         <div class="col-6">
-          <img src="img/kevinprofil.jpg" />
-          <img src="img/miroslawprofil.jpg" />
-          <img src="img/jaquelineprofil.jpg" />
-          <img src="img/profilrobin.jpg" />
+          <img src="img/logo.jpg" />
         </div>
 
       </div>
