Wrap navigation links with <li> elements

--- a/index.html
+++ b/index.html
@@ -25,11 +25,11 @@
           <a href="#"><img class="logo" src="img/logo.jpg" /></a>
 
           <ul>
-            <a href="#"><img src="icons/home.png"></a>
-            <a href="#">Usługi</a>
-            <a href="#">O nas</a>
-            <a href="#">Kontakt</a>
-            <a href="#">Galeria</a>
+            <li><a href="#"><img src="icons/home.png"></a></li>
+            <li><a href="#">Usługi</a></li>
+            <li><a href="#">O nas</a></li>
+            <li><a href="#">Kontakt</a></li>
+            <li><a href="#">Galeria</a></li>
           </ul>
 
         </nav>
