--- a/service.html
+++ b/service.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Kejaro - Twoja strona - nasza pasja</title>
+    <title>Twoje Usługi</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -25,9 +25,11 @@
 
             <ul>
               <li>
-                <a href="#"><img src="icons/home.png" /></a>
+                <a href="index.html"><img src="icons/home.png" /></a>
               </li>
-              <li><a href="service.html">Usługi</a></li>
+              <li>
+                <a href="#"><img src="icons/service.png" /></a>
+              </li>
               <li><a href="about.html">O nas</a></li>
               <li><a href="contact.html">Kontakt</a></li>
               <li><a href="gallery.html">Galeria</a></li>
@@ -51,7 +53,7 @@
         </div>
 
         <div class="row">
-          <a href="service.html"><button>Nasze Usługi</button></a>
+          <button>Nasze Usługi</button>
         </div>
       </div>
     </header>
@@ -64,15 +66,17 @@
           </div>
 
           <div class="col-6">
-            <h2>Tworzenie Stron WWW</h2>
+            <h2 id="webDeveloper">Tworzenie Stron WWW</h2>
             <p>
               Jesteśmy pasjonatami tworzenia unikalnych stron internetowych,
               które wyróżniają się nie tylko estetyką, ale także
               funkcjonalnością. Nasza mała firma skupia się na indywidualnym
               podejściu do każdego klienta, dopasowując projekt do Twoich
-              unikalnych potrzeb i celów biznesowych.
+              unikalnych potrzeb i celów biznesowych. Lorem ipsum dolor sit amet
+              consectetur adipisicing elit. Vitae nam tempora unde blanditiis
+              est porro maxime dolorum aliquid minima veniam deserunt aut libero
+              quaerat magnam soluta consectetur, ipsa quo sequi?
             </p>
-            <a href="service.html#webDeveloper"><button>Zobacz Galerię</button></a>
           </div>
         </div>
 
@@ -82,41 +86,17 @@
           </div>
 
           <div class="col-6">
-            <h2>Projektowanie WWW</h2>
+            <h2 id="webDesign">Projektowanie WWW</h2>
             <p>
               Specjalizujemy się w projektowaniu stron internetowych,
               przywiązując wagę do detali, estetyki i funkcjonalności. Jesteśmy
               małą firmą z wielkim zapałem do tworzenia unikalnych przestrzeni
               online, które nie tylko przyciągają uwagę, ale także skutecznie
-              przekazują wartości Twojego biznesu.
+              przekazują wartości Twojego biznesu. Lorem ipsum dolor sit amet,
+              consectetur adipisicing elit. Repellat aliquam sed dolores
+              obcaecati similique eaque accusamus cumque, impedit iste hic ab
+              vel numquam modi quia eligendi deserunt amet magnam quaerat?
             </p>
-            <a href="service.html#webDesign"><button>Zobacz Galerię</button></a>
-          </div>
-        </div>
-      </div>
-    </section>
-
-    <section class="about">
-      <div class="container">
-        <div class="row">
-          <div class="col-6">
-            <div class="wrapper">
-              <div>
-                <h2>O Nas</h2>
-                <p>
-                  Kejaro to mała firma, która zajmuje się budową i administracją
-                  stron internetowych. Oferujemy kompleksowe usługi, od
-                  opracowania koncepcji i projektu, po wdrożenie i promocję
-                  strony.
-                </p>
-              </div>
-
-              <a href="about.html"><button>Czytaj Więcej</button></a>
-            </div>
-          </div>
-
-          <div class="col-6">
-            <img src="img/logo.jpg" />
           </div>
         </div>
       </div>
