--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Aldrich&family=Inter&display=swap" rel="stylesheet">
-  <link href="icons/css/fontawesome.css" rel="stylesheet">
-  <link href="icons/css/brands.css" rel="stylesheet">
-  <link href="icons/css/solid.css" rel="stylesheet">
+  <link href="/icons/css/fontawesome.css" rel="stylesheet">
+  <link href="/icons/css/brands.css" rel="stylesheet">
+  <link href="/icons/css/solid.css" rel="stylesheet">
   <link rel="stylesheet" href="css/style.css" />
 </head>
 
@@ -22,10 +22,10 @@
       <div class="row">
         <nav>
 
-          <a href="#"><img class="logo" src="img/logo.jpg" /></a>
+          <a href="#"><img class="logo" src="img/logo.jpg" alt="Logo" /></a>
 
           <ul>
-            <li><a href="#"><img src="icons/home.png"></a></li>
+            <li><a href="#"><img src="icons/home.png" alt="Home Icon"></a></li>
             <li><a href="#">Usługi</a></li>
             <li><a href="#">O nas</a></li>
             <li><a href="#">Kontakt</a></li>
@@ -37,23 +37,25 @@
 
       <div class="row">
 
-        <div class="col-7">
-          <div class="wrapper">
+        <div class="col-12 col-md-7">
+          <div class="header-wrapper">
             <h1>KEJARO</h1>
             <p>Twoja strona - nasza pasja</p>
           </div>
         </div>
 
-        <div class="col-5">
+        <div class="col-12 col-md-5">
           <div class="globus-wrapper">
-            <img class="globus" src="img/globus.png" />
+            <img class="globus" src="img/globus.png" alt="Globus" />
           </div>
         </div>
 
       </div>
 
       <div class="row">
-        <button>Nasze Usługi</button>
+        <div class="button-wrapper">
+          <button>Nasze Usługi</button>
+        </div>
       </div>
 
     </div>
@@ -64,11 +66,11 @@
 
       <div class="row">
 
-        <div class="col-6">
-          <img src="img/webDeveloper.jpg">
+        <div class="col-12 col-md-6">
+          <img src="img/webDeveloper.jpg" alt="Web Developer">
         </div>
 
-        <div class="col-6">
+        <div class="col-12 col-md-6">
           <h2>Tworzenie Stron WWW</h2>
           <p>Jesteśmy pasjonatami tworzenia unikalnych stron internetowych, które wyróżniają się nie tylko estetyką, ale także funkcjonalnością. Nasza mała firma skupia się na indywidualnym podejściu do każdego klienta, dopasowując projekt do Twoich unikalnych potrzeb i celów biznesowych.</p>
           <button>Zobacz Galerię</button>
@@ -78,11 +80,11 @@
 
       <div class="row">
 
-        <div class="col-6">
-          <img src="img/webDesign.jpg">
+        <div class="col-12 col-md-6">
+          <img src="img/webDesign.jpg" alt="Web Design">
         </div>
 
-        <div class="col-6">
+        <div class="col-12 col-md-6">
           <h2>Projektowanie WWW</h2>
           <p>Specjalizujemy się w projektowaniu stron internetowych, przywiązując wagę do detali, estetyki i funkcjonalności. Jesteśmy małą firmą z wielkim zapałem do tworzenia unikalnych przestrzeni online, które nie tylko przyciągają uwagę, ale także skutecznie przekazują wartości Twojego biznesu.</p>
           <button>Zobacz Galerię</button>
@@ -97,7 +99,7 @@
     <div class="container">
       <div class="row">
 
-        <div class="col-6">
+        <div class="col-12 col-md-6">
           <div class="wrapper">
         
             <div>
@@ -110,8 +112,8 @@
           </div>
         </div>
 
-        <div class="col-6">
-          <img src="img/logo.jpg" />
+        <div class="col-12 col-md-6">
+          <img src="img/logo.jpg" alt="Logo" />
         </div>
 
       </div>
