new page and fixed conflict and bugs in the home page

--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
           <a href="service.html"><button>Nasze Usługi</button></a>
         </div>
       </div>
+      </header>
 
     <section class="service">
       <div class="container">
