--- a/gallery.html
+++ b/gallery.html
@@ -17,45 +17,93 @@
   </head>
 
   <body>
+
     <header>
       <div class="container">
+  
         <div class="row">
           <nav>
-            <a href="#"><img class="logo" src="img/logo.jpg" /></a>
-
+  
+            <a href="index.html"><img class="logo" src="img/logo.jpg" alt="Logo" /></a>
+  
             <ul>
-              <li>
-                <a href="index.html"><img src="icons/home.png" /></a>
-              </li>
+              <li><a href="index.html"><img src="icons/home.png" alt="Home Icon"></a></li>
               <li><a href="service.html">Usługi</a></li>
               <li><a href="about.html">O nas</a></li>
               <li><a href="contact.html">Kontakt</a></li>
-              <li><a href="#"><img src="icons/gallery.png"></a></li>
+              <li><a href="#"><img src="icons/gallery.png" alt="Home Icon"></a></li>
             </ul>
+  
           </nav>
         </div>
-
+  
         <div class="row">
-          <div class="col-7">
-            <div class="wrapper">
+  
+          <div class="col-12 col-md-7">
+            <div class="header-wrapper">
               <h1>KEJARO</h1>
               <p>Twoja strona - nasza pasja</p>
             </div>
           </div>
-
-          <div class="col-5">
+  
+          <div class="col-12 col-md-5">
             <div class="globus-wrapper">
-              <img class="globus" src="img/globus.png" />
+              <img class="globus" src="img/globus.png" alt="Globus" />
             </div>
           </div>
+  
         </div>
-
+  
         <div class="row">
-          <a href="service.html"><button>Nasze Usługi</button></a>
+          <div class="button-wrapper">
+            <button>Nasze Usługi</button>
+          </div>
         </div>
+  
       </div>
     </header>
 
+    <section>
+      <div class="container">
+
+        <div class="row">
+
+          <div class="col-6">
+            <figure>
+              <img src="img/projekt-pizzeria.png" width="300" height="250">
+              <figcaption>Opis obrazu</figcaption>
+            </figure>
+          </div>
+
+          <div class="col-6">
+            <figure>
+              <img src="img/projekt-pizzeria.png" width="300" height="250">
+              <figcaption>Opis obrazu</figcaption>
+            </figure>
+          </div>
+
+        </div>
+
+        <div class="row">
+
+          <div class="col-6">
+            <figure>
+              <img src="img/projekt-pizzeria.png" width="300" height="250">
+              <figcaption>Opis obrazu</figcaption>
+            </figure>
+          </div>
+
+          <div class="col-6">
+            <figure>
+              <img src="img/projekt-pizzeria.png" width="300" height="250">
+              <figcaption>Opis obrazu</figcaption>
+            </figure>
+          </div>
+
+        </div>
+
+      </div>
+    </section>
 
     <section class="contact">
       <div class="container">
