--- a/service.html
+++ b/service.html
@@ -19,86 +19,76 @@
   <body>
     <header>
       <div class="container">
+  
         <div class="row">
           <nav>
-            <a href="#"><img class="logo" src="img/logo.jpg" /></a>
-
+  
+            <a href="index.html"><img class="logo" src="img/logo.jpg" alt="Logo" /></a>
+  
             <ul>
-              <li>
-                <a href="index.html"><img src="icons/home.png" /></a>
-              </li>
-              <li>
-                <a href="#"><img src="icons/service.png" /></a>
-              </li>
+              <li><a href="index.html"><img src="icons/home.png" alt="Home Icon"></a></li>
+              <li><a href="#"><img src="icons/service.png" alt="Home Icon"></a></li>
               <li><a href="about.html">O nas</a></li>
               <li><a href="contact.html">Kontakt</a></li>
               <li><a href="gallery.html">Galeria</a></li>
             </ul>
+  
           </nav>
         </div>
-
+  
         <div class="row">
-          <div class="col-7">
-            <div class="wrapper">
+  
+          <div class="col-12 col-md-7">
+            <div class="header-wrapper">
               <h1>KEJARO</h1>
               <p>Twoja strona - nasza pasja</p>
             </div>
           </div>
-
-          <div class="col-5">
+  
+          <div class="col-12 col-md-5">
             <div class="globus-wrapper">
-              <img class="globus" src="img/globus.png" />
+              <img class="globus" src="img/globus.png" alt="Globus" />
             </div>
           </div>
+  
         </div>
-
+  
         <div class="row">
-          <button>Nasze Usługi</button>
+          <div class="button-wrapper">
+            <button>Nasze Usługi</button>
+          </div>
         </div>
+  
       </div>
     </header>
 
-    <section class="service">
+    <section>
       <div class="container">
-        <div class="row">
-          <div class="col-6">
-            <img src="img/webDeveloper.jpg" />
-          </div>
-
-          <div class="col-6">
-            <h2 id="webDeveloper">Tworzenie Stron WWW</h2>
-            <p>
-              Jesteśmy pasjonatami tworzenia unikalnych stron internetowych,
-              które wyróżniają się nie tylko estetyką, ale także
-              funkcjonalnością. Nasza mała firma skupia się na indywidualnym
-              podejściu do każdego klienta, dopasowując projekt do Twoich
-              unikalnych potrzeb i celów biznesowych. Lorem ipsum dolor sit amet
-              consectetur adipisicing elit. Vitae nam tempora unde blanditiis
-              est porro maxime dolorum aliquid minima veniam deserunt aut libero
-              quaerat magnam soluta consectetur, ipsa quo sequi?
-            </p>
-          </div>
-        </div>
-
-        <div class="row">
-          <div class="col-6">
-            <img src="img/webDesign.jpg" />
-          </div>
-
-          <div class="col-6">
-            <h2 id="webDesign">Projektowanie WWW</h2>
-            <p>
-              Specjalizujemy się w projektowaniu stron internetowych,
-              przywiązując wagę do detali, estetyki i funkcjonalności. Jesteśmy
-              małą firmą z wielkim zapałem do tworzenia unikalnych przestrzeni
-              online, które nie tylko przyciągają uwagę, ale także skutecznie
-              przekazują wartości Twojego biznesu. Lorem ipsum dolor sit amet,
-              consectetur adipisicing elit. Repellat aliquam sed dolores
-              obcaecati similique eaque accusamus cumque, impedit iste hic ab
-              vel numquam modi quia eligendi deserunt amet magnam quaerat?
-            </p>
-          </div>
-        </div>
+        <h2>Tworzenie Stron WWW</h2>
+        <p>Jesteśmy pasjonatami tworzenia unikalnych stron internetowych,
+          które wyróżniają się nie tylko estetyką, ale także
+          funkcjonalnością. Nasza mała firma skupia się na indywidualnym
+          podejściu do każdego klienta, dopasowując projekt do Twoich
+          unikalnych potrzeb i celów biznesowych.</p>
+        <p>Z nami zbudujesz nie tylko stronę internetową, ale także silną obecność online. Nasz zespół jest gotów podjąć się
+          każdego wyzwania. Oferujemy nowoczesne rozwiązania, które przyciągają uwagę, budują zaufanie klientów i przekładają
+          się na sukces Twojego biznesu.</p>
+        <p>Niezależnie od tego, czy potrzebujesz strony wizytówki, sklepu internetowego czy platformy blogowej – mamy dla
+          Ciebie odpowiednie narzędzia i pomysły. Daj nam szansę zmaterializować Twoją wizję online. Z KEJARO tworzymy nie
+          tylko strony internetowe, ale także historie sukcesu w świecie cyfrowym.</p>
+        <h2>Projektowanie WWW</h2>
+        <p>Specjalizujemy się w projektowaniu stron internetowych,
+          przywiązując wagę do detali, estetyki i funkcjonalności. Jesteśmy
+          małą firmą z wielkim zapałem do tworzenia unikalnych przestrzeni
+          online, które nie tylko przyciągają uwagę, ale także skutecznie
+          przekazują wartości Twojego biznesu.</p>
+        <p>Nasz zespół projektantów to kreatywni profesjonaliści, gotowi podjąć się każdego wyzwania. Indywidualne podejście
+          do klienta to dla nas priorytet – chcemy zrozumieć Twoje cele i potrzeby, aby stworzyć stronę, która nie tylko
+          zachwyci wizualnie, ale również przysporzy sukcesów biznesowych.</p>
+        <p>Niech KEJARO poprowadzi Cię przez proces projektowania, dostosowanego do Twoich oczekiwań. Oferujemy nie tylko
+          umiejętności, ale także zaangażowanie w każdy projekt. Z nami Twoja strona internetowa stanie się niepowtarzalnym
+          narzędziem, podkreślającym unikalność i profesjonalizm Twojej marki. Razem z KEJARO twórzmy online historię Twojego
+          sukcesu!</p>
       </div>
     </section>
 
