--- a/about.html
+++ b/about.html
@@ -22,12 +22,12 @@
       <div class="row">
         <nav>
 
-          <a href="#"><img class="logo" src="img/logo.jpg" /></a>
+          <a href="index.html"><img class="logo" src="img/logo.jpg" alt="Logo" /></a>
 
           <ul>
-            <li><a href="index.html"><img src="icons/home.png"></a></li>
+            <li><a href="index.html"><img src="icons/home.png" alt="Home Icon"></a></li>
             <li><a href="service.html">Usługi</a></li>
-            <li><a href="#"><img src="icons/about.png"></a></li>
+            <li><a href="#"><img src="icons/about.png" alt="Home Icon"></a></li>
             <li><a href="contact.html">Kontakt</a></li>
             <li><a href="gallery.html">Galeria</a></li>
           </ul>
@@ -37,28 +37,83 @@
 
       <div class="row">
 
-        <div class="col-7">
-          <div class="wrapper">
+        <div class="col-12 col-md-7">
+          <div class="header-wrapper">
             <h1>KEJARO</h1>
             <p>Twoja strona - nasza pasja</p>
           </div>
         </div>
 
-        <div class="col-5">
+        <div class="col-12 col-md-5">
           <div class="globus-wrapper">
-            <img class="globus" src="img/globus.png" />
+            <img class="globus" src="img/globus.png" alt="Globus" />
           </div>
         </div>
 
       </div>
 
       <div class="row">
-        <a href="service.html"><button>Nasze Usługi</button></a>
+        <div class="button-wrapper">
+          <button>Nasze Usługi</button>
+        </div>
       </div>
 
     </div>
   </header>
   
+  <section>
+    <div class="container">
+
+      <div class="row">
+
+        <div class="col-12 col-md-6">
+          <img src="img/miroslawprofil.jpg" width="300" height="300" alt="Web Developer">
+        </div>
+
+        <div class="col-12 col-md-6">
+          <p>Aliquam ullamcorper in tellus sed rutrum. Nullam quis efficitur tortor. Mauris ullamcorper bibendum nulla ac vulputate. Sed vel volutpat tortor. Suspendisse potenti. Praesent quis quam sem. Nullam vehicula est et tellus iaculis, in porta urna imperdiet.</p>
+        </div>
+
+      </div>
+
+      <div class="row">
+
+        <div class="col-12 col-md-6">
+          <img src="img/kevinprofil.jpg" width="300" height="300" alt="Web Design">
+        </div>
+
+        <div class="col-12 col-md-6">
+          <p>Aliquam ullamcorper in tellus sed rutrum. Nullam quis efficitur tortor. Mauris ullamcorper bibendum nulla ac vulputate. Sed vel volutpat tortor. Suspendisse potenti. Praesent quis quam sem. Nullam vehicula est et tellus iaculis, in porta urna imperdiet.</p>
+        </div>
+
+      </div>
+
+      <div class="row">
+
+        <div class="col-12 col-md-6">
+          <img src="img/jaquelineprofil.jpg" width="300" height="300" alt="Web Design">
+        </div>
+
+        <div class="col-12 col-md-6">
+          <p>Aliquam ullamcorper in tellus sed rutrum. Nullam quis efficitur tortor. Mauris ullamcorper bibendum nulla ac vulputate. Sed vel volutpat tortor. Suspendisse potenti. Praesent quis quam sem. Nullam vehicula est et tellus iaculis, in porta urna imperdiet.</p>
+        </div>
+
+      </div>
+
+      <div class="row">
+
+        <div class="col-12 col-md-6">
+          <img src="img/profilrobin.jpg" width="300" height="300" alt="Web Design">
+        </div>
+
+        <div class="col-12 col-md-6">
+          <p>Aliquam ullamcorper in tellus sed rutrum. Nullam quis efficitur tortor. Mauris ullamcorper bibendum nulla ac vulputate. Sed vel volutpat tortor. Suspendisse potenti. Praesent quis quam sem. Nullam vehicula est et tellus iaculis, in porta urna imperdiet.</p>
+        </div>
+
+      </div>
+
+    </div>
+  </section>
 
   <section class="contact">
     <div class="container">
