--- a/contact.html
+++ b/contact.html
@@ -19,66 +19,73 @@
   <body>
     <header>
       <div class="container">
+  
         <div class="row">
           <nav>
-            <a href="#"><img class="logo" src="img/logo.jpg" /></a>
-
+  
+            <a href="index.html"><img class="logo" src="img/logo.jpg" alt="Logo" /></a>
+  
             <ul>
-              <li>
-                <a href="index.html"><img src="icons/home.png" /></a>
-              </li>
+              <li><a href="index.html"><img src="icons/home.png" alt="Home Icon"></a></li>
               <li><a href="service.html">Usługi</a></li>
               <li><a href="about.html">O nas</a></li>
-              <li><a href="#"><img src="icons/contact.png"></a></li>
+              <li><a href="#"><img src="icons/contact.png" alt="Home Icon"></a></li>
               <li><a href="gallery.html">Galeria</a></li>
             </ul>
+  
           </nav>
         </div>
-
+  
         <div class="row">
-          <div class="col-7">
-            <div class="wrapper">
+  
+          <div class="col-12 col-md-7">
+            <div class="header-wrapper">
               <h1>KEJARO</h1>
               <p>Twoja strona - nasza pasja</p>
             </div>
           </div>
-
-          <div class="col-5">
+  
+          <div class="col-12 col-md-5">
             <div class="globus-wrapper">
-              <img class="globus" src="img/globus.png" />
+              <img class="globus" src="img/globus.png" alt="Globus" />
             </div>
           </div>
+  
         </div>
-
+  
         <div class="row">
-          <a href="service.html"><button>Nasze Usługi</button></a>
+          <div class="button-wrapper">
+            <button>Nasze Usługi</button>
+          </div>
         </div>
+  
       </div>
     </header>
 
-    <section id="contact">
+    <section>
       <div class="container">
-        <h2>Kontakt</h2>
-        <div class="col-6">
-          <label for="userName">Imię *</label>
-          <input type="text" name="firstName" id="firstName" />
-        </div>
-
-        <div class="col-6">
-          <label for="userName">Nazwisko</label>
-          <input type="text" name="lastName" id="lastName" />
-        </div>
-
-        <div class="coll-6">
-          <label for="userName">E-mail *</label>
-          <input type="text" name="email" id="email" />
-        </div>
-        <div class="col-6">
-          <label for="">Wiadomość *</label>
-            <textarea name="" id="" cols="30" rows="10"></textarea>
-        </div>
-        <div class="col-6">
-            <button>Wyśli</button>
+        <h2 class="section-title">Skontaktuj się z nami</h2>
+  
+        <div class="contact-wrapper">
+          <form>
+            <input type="text" placeholder="Your name">
+            <input type="email" placeholder="Your e-mail">
+            <input type="text" placeholder="Subject">
+            <textarea placeholder="Type your message here"></textarea>
+            <button type="submit" href="#" class="btn btn-one">submit</button>
+          </form>
+          <div class="contact-details">
+            <h3>sales specialist</h3>
+            <p>Elinor Kinder</p>
+            
+            <h3>address</h3>
+            <p>299 Browning Lane<br>
+              Cortland<br>
+              13045 New York</p>
+  
+            <h3>phone</h3>
+            <p>607-835-7016</p>
+          </div>
         </div>
       </div>
     </section>
