--- a/index.html
+++ b/index.html
@@ -22,14 +22,14 @@
       <div class="row">
         <nav>
 
-          <a href="#"><img class="logo" src="img/logo.jpg" alt="Logo" /></a>
+          <a href="index.html"><img class="logo" src="img/logo.jpg" alt="Logo" /></a>
 
           <ul>
             <li><a href="#"><img src="icons/home.png" alt="Home Icon"></a></li>
-            <li><a href="#">Usługi</a></li>
-            <li><a href="#">O nas</a></li>
-            <li><a href="#">Kontakt</a></li>
-            <li><a href="#">Galeria</a></li>
+            <li><a href="service.html">Usługi</a></li>
+            <li><a href="about.html">O nas</a></li>
+            <li><a href="contact.html">Kontakt</a></li>
+            <li><a href="gallery.html">Galeria</a></li>
           </ul>
 
         </nav>
