Move all icons from folder icons into img
The icons are not showing, when the website is on server, because the
folder icons i already reserved by the server. Put all icons into folder
img and delete folder icons. Change also all links to these icons at all
html files.

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
           <a href="index.html"><img class="logo" src="img/logo.jpg" alt="Logo" /></a>
 
           <ul>
-            <li><a href="#"><img src="icons/home.png" alt="Home Icon"></a></li>
+            <li><a href="#"><img src="img/home.png" alt="Home Icon"></a></li>
             <li><a href="service.html">Usługi</a></li>
             <li><a href="about.html">O nas</a></li>
             <li><a href="contact.html">Kontakt</a></li>
