--- a/service.html
+++ b/service.html
@@ -26,8 +26,8 @@
             <a href="index.html"><img class="logo" src="img/logo.jpg" alt="Logo" /></a>
   
             <ul>
-              <li><a href="index.html"><img src="icons/home.png" alt="Home Icon"></a></li>
-              <li><a href="#"><img src="icons/service.png" alt="Home Icon"></a></li>
+              <li><a href="index.html"><img src="img/home.png" alt="Home Icon"></a></li>
+              <li><a href="#"><img src="img/service.png" alt="Home Icon"></a></li>
               <li><a href="about.html">O nas</a></li>
               <li><a href="contact.html">Kontakt</a></li>
               <li><a href="gallery.html">Galeria</a></li>
