--- a/about.html
+++ b/about.html
@@ -25,9 +25,9 @@
           <a href="index.html"><img class="logo" src="img/logo.jpg" alt="Logo" /></a>
 
           <ul>
-            <li><a href="index.html"><img src="icons/home.png" alt="Home Icon"></a></li>
+            <li><a href="index.html"><img src="img/home.png" alt="Home Icon"></a></li>
             <li><a href="service.html">Usługi</a></li>
-            <li><a href="#"><img src="icons/about.png" alt="Home Icon"></a></li>
+            <li><a href="#"><img src="img/about.png" alt="Home Icon"></a></li>
             <li><a href="contact.html">Kontakt</a></li>
             <li><a href="gallery.html">Galeria</a></li>
           </ul>
