--- a/contact.html
+++ b/contact.html
@@ -26,10 +26,10 @@
             <a href="index.html"><img class="logo" src="img/logo.jpg" alt="Logo" /></a>
   
             <ul>
-              <li><a href="index.html"><img src="icons/home.png" alt="Home Icon"></a></li>
+              <li><a href="index.html"><img src="img/home.png" alt="Home Icon"></a></li>
               <li><a href="service.html">Usługi</a></li>
               <li><a href="about.html">O nas</a></li>
-              <li><a href="#"><img src="icons/contact.png" alt="Home Icon"></a></li>
+              <li><a href="#"><img src="img/contact.png" alt="Home Icon"></a></li>
               <li><a href="gallery.html">Galeria</a></li>
             </ul>
   
